fix(java:S6204): Replace this usage of 'Stream.collect(Collectors.toList()...
This change replaces a stream terminal operation from `.collect(Collectors.toList())` to `.toList()`. The static analysis warning was about preferring `Stream.toList()` when saving the result of a stream to a list that is not meant to be modified, because `collect(Collectors.toList())` returns a mutable list and is more verbose. Using `.toList()` directly produces an unmodifiable list in a simpler way and aligns with modern Java best practices, thereby resolving the reported code smell.